# owncloud-files-scope

./: .gitignore  CMakeLists.txt  README.md  manifest.json.in
po/: CMakeLists.txt  Makefile.in.in  POTFILES.in  POTFILES.in.in  owncloud-files-scope.pot
src/: CMakeLists.txt  filetypes.js  owncloud-files.js  translations.js  utils.js  webdav.js
src/data/: owncloud-files-settings.ini.in  owncloud-files.ini.in
